name:               barberry-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , pandoc == 2.*
                  , pandoc-types == 1.*
                  , text == 1.*
                  , containers == 0.6.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
